--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 type: install
 jpsVersion: '1.8.1'
-name: Multi-Region Redis Cluster
-id: redis-cluster-multiregions
+name: Multi-Region Redis Cluster PoC
+id: redis-cluster-multiregions-poc
 categories:
   - apps/clusters
 logo: /images/redis-multiregion-logo.png
