--- a/manifest.yml
+++ b/manifest.yml
@@ -4,6 +4,7 @@ name: Multi-Region Redis Cluster
 id: redis-cluster-multiregions
 categories:
   - apps/clusters
+  - apps/databases
 logo: /images/redis-multiregion-logo.png
 description: 
   text: Highly-available and reliable Redis cluster setup with automatic multi-region distribution
