--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 type: install
 jpsVersion: '1.8.1'
-name: Multi-Region Redis Cluster PoC
-id: redis-cluster-multiregions-poc
+name: Multi-Region Redis Cluster
+id: redis-cluster-multiregions
 categories:
   - apps/clusters
   - apps/databases
@@ -9,7 +9,7 @@ logo: /images/redis-multiregion-logo.png
 description: 
   text: Highly-available and reliable Redis cluster setup with automatic multi-region distribution
   short: Enterprise-grade Redis Cluster with automatic distribution across several regions
-baseUrl: https://raw.githubusercontent.com/sych74/redis-multiregion/master
+baseUrl: https://raw.githubusercontent.com/jelastic-jps/redis-multiregion/master
 
 onBeforeInit: scripts/onBeforeInit.js
 
